frame/support/test/tests/pallet_ui/composite_enum_unsupported_identifier.rs
#[frame_support::pallet]
mod pallet {
	#[pallet::config]
	pub trait Config: frame_system::Config {}

	#[pallet::pallet]
	pub struct Pallet<T>(core::marker::PhantomData<T>);

	#[pallet::composite_enum]
	pub enum HoldReasons {}
}

fn main() {}